# topic_chunking

./: LICENSE  README.md  app.py  pyproject.toml
src/: __init__.py  _body_resplit.py  _spacy_model.py  _topic_split.py  constraints.py  docling_topic.py  models.py  text_format.py  tokenizer.py  topic.py
tests/: test_docling_topic.py
